syntax = "proto3";
package denseid.relay.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dense-identity/denseid/api/go/relay/v1;relaypb";

message SubscribeRequest {
  string topic    = 1;
  bytes ticket    = 2;
  string sender_id = 3;
}

message RelayMessage {
  string topic    = 1;
  bytes  payload    = 2;
  string corr_id = 3;
  string sender_id = 4;
}

message PublishResponse {
  string status = 1;
  google.protobuf.Timestamp relay_at = 2;
}

service RelayService {
  rpc Subscribe(SubscribeRequest) returns (stream RelayMessage);
  rpc Publish  (RelayMessage)       returns (PublishResponse);
}
